--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <footer>
         <hr>
         <p>
-            Get in touch via email: <a target="_blank" href="mailto:abigailholland22@gmail.com">abigailholland22@gmail.com</a> or via Twitter <a href="https://twitter.com/holland_neuro"></a>
+            Get in touch via email: 
+            <a target="_blank" href="mailto:abigailholland22@gmail.com">abigailholland22@gmail.com</a> 
+            or via Twitter: 
+            <a href="https://twitter.com/holland_neuro">https://twitter.com/holland_neuro</a>
         </p>
     </footer>
     
