--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
 
     <footer>
         <hr>
+        <div class="container-fluid">
         <p>
+          
+
             Get in touch via email: 
             <a target="_blank" href="mailto:abigailholland22@gmail.com">abigailholland22@gmail.com</a> 
             or via Twitter: 
             <a href="https://twitter.com/holland_neuro">https://twitter.com/holland_neuro</a>
         </p>
+        </div>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
