--- a/index.html
+++ b/index.html
@@ -11,13 +11,32 @@
 
 <body class="vsc-initialized">
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-info">
+      <nav class="navbar navbar-expand-lg bg-info">
       <div class="container-fluid">
       <a class="navbar-brand" href="#">GAIA Health</a>
       </div>
       </nav>
     </header>
 
+    <div class="container-fluid">
+      <h3> 
+        Empower Your Health Journey: Personalized Insights, Unified Wellness
+      </h3>
+
+      <p>
+        Welcome to Gaia Health, where your path to longevity and wellness is our passion.
+        Our innovative platform transforms your health data from wearables and manual inputs into a symphony of personalized insights.
+        Imagine having a health assistant that not only understands your daily habits but also predicts your needs, guiding you towards optimal wellbeing. 
+        With Gaia Health, you're not just tracking your health; you're actively shaping it. 
+        Join us on a journey to a healthier, happier you, where every step is informed, every decision empowered, and your entire well-being is harmoniously aligned."
+      </p>
+      
+      <hr>
+      <a href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0">
+        Click here to join our mailing list or request early acccess 
+      </a>
+    </div>
+  
     <footer>
         <hr>
         <div class="container-fluid">
