--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Imagine having a health assistant that not only understands your daily habits bu
 With Gaia Health, you're not just tracking your health; you're actively shaping it. 
 </p>
 <p>
-Join us on a journey to a healthier, happier you, where every step is informed, every decision empowered, and your entire well-being is harmoniously aligned."
+Join us on a journey to a healthier, happier you, where every step is informed, every decision empowered, and your entire well-being is harmoniously aligned.
 </p>
       
       <hr>
