--- a/index.html
+++ b/index.html
@@ -22,46 +22,83 @@
     <main role="main">
         <section class="hero-section text-center">
             <div class="container py-5">
-                <h1 class="display-4 fw-bold">Welcome to GAIA Health Beta</h1>
-                <p class="lead my-3">Embark on an enriched wellness journey with GAIA Health – your personal health ecosystem.</p>
-                <p class="lead my-4">Join our beta program and take the first step in harmonizing your body, mind, and spirit.</p>
-                <a class="btn btn-secondary btn-lg" href="#early-access" role="button">Get Early Access</a>
+                <h1 class="display-4 fw-bold">GAIA: Your Wellness CoPilot</h1>
+                <p class="lead my-3">Balance your long-term wellbeing with short-term living, with GAIA's personalized health analytics</p>
+        <!-- <p class="lead my-3">Automatically process your data - simply leverage what you already track.</p>
+                <p class="lead my-4">Control your Data. Understand the impact of your actions. Leverage this knowledge to make your future, ideal. Leverage the data you already measure- Understand the impact of your actions - Choose the future you invest in<</p>" -->
+                <a class="btn btn-secondary btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Get Early Access</a>
             </div>
         </section>
 
         <section id="features" class="feature-section py-5 bg-light">
             <div class="container">
+              <h2>Why Use GAIA?</h2>
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                     <div class="feature-box col d-flex align-items-start">
                         <div class="icon-square bg-primary text-light me-3">
                             <i class="bi bi-graph-up" style="font-size: 2rem;"></i>
                         </div>
                         <div>
-                            <h2>Unified Health Data</h2>
-                            <p>Get a complete overview of your health metrics in one place, crafted to empower your lifestyle choices.</p>
-                        </div>
+                            <h2>Simple Health Overview</h2>
+                            <p>Tailored summaries help you track today's health and progress over time, ensuring every aspect of your well-being is simple to understand.</p>
+                          </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
                         <div class="icon-square bg-primary text-light me-3">
                             <i class="bi bi-person-bounding-box" style="font-size: 2rem;"></i>
                         </div>
                         <div>
-                            <h2>Personalized Health Insights</h2>
-                            <p>Receive custom recommendations based on your data, pushing you towards optimal well-being.</p>
-                        </div>
+                            <h2>Long Term Outlook</h2>
+                            <p>Focus on sustainable health with strategies that prioritize your long-term well-being, ensuring you maintain vitality today and into the future, without the burnout.</p>
+                          </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
                         <div class="icon-square bg-primary text-light me-3">
                             <i class="bi bi-heart-pulse" style="font-size: 2rem;"></i>
                         </div>
                         <div>
-                            <h2>Shape Your Health</h2>
-                            <p>Engage actively with your health data to make informed decisions that nurture your wellness journey.</p>
-                        </div>
+                            <h2>Dream Data Access</h2>
+                            <p>In-app data processing basics- View and compare different data, finding patterns in your data with our graphs, and statistically assess relationships with our analyses. Not enough? Easily export the data you want as a CSV.</p>
+                          </div>
                     </div>
                 </div>
+                <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                  <div class="feature-box col d-flex align-items-start">
+                      <div class="icon-square bg-primary text-light me-3">
+                          <i class="bi bi-graph-up" style="font-size: 2rem;"></i>
+                      </div>
+                      <div>
+                          <h2>Ultra-Fast Logging</h2>
+                          <p>Log your health data in under two seconds with our streamlined process, designed for efficiency and ease, keeping your day uninterrupted and your data tracking on point.</p>
+                        </div>
+                  </div>
+                  <div class="feature-box col d-flex align-items-start">
+                      <div class="icon-square bg-primary text-light me-3">
+                          <i class="bi bi-person-bounding-box" style="font-size: 2rem;"></i>
+                      </div>
+                      <div>
+                          <h2>Log Anything</h2>
+                          <p>We let you log anything- allowing you to record and analyze data that is important to you. If you want to log something we don't have, reach out!</p>
+                        </div>
+                  </div>
+                  <div class="feature-box col d-flex align-items-start">
+                      <div class="icon-square bg-primary text-light me-3">
+                          <i class="bi bi-heart-pulse" style="font-size: 2rem;"></i>
+                      </div>
+                      <div>
+                          <h2>Single Health Metric</h2>
+                          <p>We simplify preventative health by providing a single research-based metric, setting a clear goal of 100% each day and helping you understand how to achieve it. </p>
+                        </div>
+                  </div>
+              </div>
             </div>
         </section>
+
+        <section class="dynamic-section text-center">
+          <div class="container py-5">
+              <p> Master your <span id="dynamicWord">sleep</span> for the long run.</p>
+          </div>
+      </section>
 
         <section id="app-screenshots" class="py-5 bg-light">
           <div class="container">
@@ -95,10 +132,31 @@
           </div>
         </section>
 
-        <section id="early-access" class="cta-section text-center py-5">
+        <section class="manifesto-section">
+          <div class="container">
+              <h2>Make Self Control Sexy Again</h2>
+              <p>When I was studying Clinical Neuroscience, it occurred to me that many Neurological Disorders are cureless, but can have a significant reduction in likelihood with appropriate Preventative Health Practices.</p>
+              <p>As many in Health, this sent me down a rabbit hole of learning, and trying different tech out.</p>
+              <p>I couldn’t find any systems that I was happy with. I hit a lot of obstacles and was constantly getting frustrated and trying something new. Each time, the builders got some things right, but also some things wrong: the sensors were either low quality (ruining the value of their insights), or the sensors / insights only worked for a specific population, or the insights were poor (no discussion of the relationship between your data), or they are inundating you with way too much information, or the UI was so oversimplified that I couldn’t see any of the logic or methods they used to give me my scores, or the insights offered were only focussed on short term goals (eg train for a one-off marathon).</p>
+              <p>I started talking to my friends and realised that a lot of them were facing similar issues. They were trying to use data from the wearables they already wore, or the Drs appointments they went to, and couldn’t find any straightforward ways to store the data or get useful/understandable information out of them.</p>
+              <p>I ended up adjusting my system to work with some of them, helping them solve their personal health mysteries:</p>
+              <ul>
+                <li>How can i get my V02 back to normal range?</li>
+                <li>How consistent is my low blood pressure? Should I be worried?</li>
+                <li>How do my different meals impact my insulin levels?</li>
+                <li>I’m nervous about dementia- what can I do???</li>
+                <li>When am i working best, and how can i get more done in less time?</li>
+              </ul>
+              <p>Thus, GAIA was born.</p>
+              <p>I’ll add different things you can log, add different passive sensors, keep the algos and associated recommendations up to date with the most recent research findings, and include the most cutting-edge sensors to help you keep on top of your game.</p>
+              <p>So- check out GAIA! If you have something that you’re thinking about that I don’t account for, let me know! I’ll add it in!</p>
+          </div>
+      </section>
+
+        <section id="early-access" class="hero-section text-center py-5">
             <div class="container">
-                <h2 class="text-white display-6 fw-bold">Be Part of Our Exclusive Beta Testing Group</h2>
-                <p class="text-white lead mb-4">Your feedback can shape the future of personal health management. Get early access and help us make GAIA Health even better.</p>
+                <h2 class="display-6 fw-bold">Sign Up Today For Free</h2>
+                <p class="lead mb-4">Your feedback can shape the future of personal health management. Get early access and help us make GAIA Health even better.</p>
                 <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Join the Beta Program</a>
             </div>
         </section>
@@ -111,5 +169,44 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const words = [
+          "sleep",
+          "eating",
+          "hydration",
+          "breathing",
+          "symptoms",
+          "stress",
+          "workouts",
+          "calories",
+          "heart",
+          "mood",
+          "productivity",
+          "mental",
+          "blood pressure",
+          "sugar",
+          "meditation",
+          "recovery",
+          "skin",
+          "nutrition",
+          "steps",
+          "goals",
+          "immunity",
+          "cycle",
+          "meds",
+          "energy",
+          "weight",
+          "activity",
+          "sun",
+      ];
+
+          let i = 0;
+          setInterval(() => {
+              document.getElementById('dynamicWord').textContent = words[i];
+              i = (i + 1) % words.length; // Reset to 0 when reaching the last word
+          }, 2000); // Change the word every 2 seconds
+      });
+      </script>
+  </body>
 </html>
