--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="GAIA Health">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -35,8 +36,8 @@
               <h2>Why Use GAIA?</h2>
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                     <div class="feature-box col d-flex align-items-start">
-                        <div class="icon-square bg-primary text-light me-3">
-                            <i class="bi bi-graph-up" style="font-size: 2rem;"></i>
+                      <div class="icon-square text-black me-3">
+                        <i class="bi bi-eye" style="font-size: 2rem;"></i>
                         </div>
                         <div>
                             <h2>Simple Health Overview</h2>
@@ -44,8 +45,8 @@
                           </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
-                        <div class="icon-square bg-primary text-light me-3">
-                            <i class="bi bi-person-bounding-box" style="font-size: 2rem;"></i>
+                      <div class="icon-square text-black me-3">
+                        <i class="bi bi-calendar3" style="font-size: 2rem;"></i>
                         </div>
                         <div>
                             <h2>Long Term Outlook</h2>
@@ -53,8 +54,8 @@
                           </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
-                        <div class="icon-square bg-primary text-light me-3">
-                            <i class="bi bi-heart-pulse" style="font-size: 2rem;"></i>
+                      <div class="icon-square text-black me-3">
+                        <i class="bi bi-cloud-download" style="font-size: 2rem;"></i>
                         </div>
                         <div>
                             <h2>Dream Data Access</h2>
@@ -64,8 +65,8 @@
                 </div>
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                   <div class="feature-box col d-flex align-items-start">
-                      <div class="icon-square bg-primary text-light me-3">
-                          <i class="bi bi-graph-up" style="font-size: 2rem;"></i>
+                    <div class="icon-square text-black me-3">
+                      <i class="bi bi-clock-fill" style="font-size: 2rem;"></i>
                       </div>
                       <div>
                           <h2>Ultra-Fast Logging</h2>
@@ -73,8 +74,8 @@
                         </div>
                   </div>
                   <div class="feature-box col d-flex align-items-start">
-                      <div class="icon-square bg-primary text-light me-3">
-                          <i class="bi bi-person-bounding-box" style="font-size: 2rem;"></i>
+                    <div class="icon-square text-black me-3">
+                      <i class="bi bi-pencil-square" style="font-size: 2rem;"></i>
                       </div>
                       <div>
                           <h2>Log Anything</h2>
@@ -82,8 +83,8 @@
                         </div>
                   </div>
                   <div class="feature-box col d-flex align-items-start">
-                      <div class="icon-square bg-primary text-light me-3">
-                          <i class="bi bi-heart-pulse" style="font-size: 2rem;"></i>
+                    <div class="icon-square text-black me-3">
+                      <i class="bi bi-bar-chart-line" style="font-size: 2rem;"></i>
                       </div>
                       <div>
                           <h2>Single Health Metric</h2>
