updated some small ui stuff

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                   <a class="nav-link" href="#features">Features</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#app-screenshots">Demo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#app-screenshots">Demo</a>
+                  <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#contact">Contact</a>
@@ -120,7 +120,6 @@
 
         <section id="app-screenshots" class="py-5 bg-light">
           <div class="container">
-            <h2 class="text-center mb-4">App Interface Gallery</h2>
             <div id="screenshotCarousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <!-- Make sure the first item has the 'active' class -->
@@ -155,7 +154,7 @@
               <h2>Make Self Control Sexy Again</h2>
               <p>When I was studying Clinical Neuroscience, it occurred to me that many Neurological Disorders are cureless, but can have a significant reduction in likelihood with appropriate Preventative Health Practices.</p>
               <p>As many in Health, this sent me down a rabbit hole of learning, and trying different tech out.</p>
-              <p>I couldn’t find any systems that I was happy with. I hit a lot of obstacles and was constantly getting frustrated and trying something new. Each time, the builders got some things right, but also some things wrong: the sensors were either low quality (ruining the value of their insights), or the sensors / insights only worked for a specific population, or the insights were poor (no discussion of the relationship between your data), or they are inundating you with way too much information, or the UI was so oversimplified that I couldn’t see any of the logic or methods they used to give me my scores, or the insights offered were only focussed on short term goals (eg train for a one-off marathon).</p>
+              <p>I couldn’t find any systems that I was happy with. I hit a lot of obstacles and was constantly getting frustrated and trying something new. Each time, the builders got some things right, but also some things wrong.</p>
               <p>I started talking to my friends and realised that a lot of them were facing similar issues. They were trying to use data from the wearables they already wore, or the Drs appointments they went to, and couldn’t find any straightforward ways to store the data or get useful/understandable information out of them.</p>
               <p>I ended up adjusting my system to work with some of them, helping them solve their personal health mysteries:</p>
               <ul>
@@ -201,7 +200,7 @@
           "heart",
           "mood",
           "productivity",
-          "mental",
+          "mental state",
           "blood pressure",
           "sugar",
           "meditation",
