--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                   <a class="nav-link" href="#features">Features</a>
               </li>
@@ -38,13 +38,11 @@
   </header>
 
     <main role="main">
-        <section class="hero-section text-center">
+        <section class="banner-section text-center">
             <div class="container py-5">
-                <h1 class="display-4 fw-bold">GAIA: Your Wellness CoPilot</h1>
-                <p class="lead my-3">Balance your long-term wellbeing with short-term living, with GAIA's personalized health analytics</p>
-        <!-- <p class="lead my-3">Automatically process your data - simply leverage what you already track.</p>
-                <p class="lead my-4">Control your Data. Understand the impact of your actions. Leverage this knowledge to make your future, ideal. Leverage the data you already measure- Understand the impact of your actions - Choose the future you invest in<</p>" -->
-                <a class="btn btn-secondary btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Get Early Access</a>
+                <h1 class="display-4 fw-bold">GAIA</h1>
+                <p class="lead mb-4">Find Your Balance, with simple, personalized health analytics</p>
+                <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Get Early Access</a>
             </div>
         </section>
 
@@ -55,58 +53,58 @@
                     <div class="feature-box col d-flex align-items-start">
                       <div class="icon-square text-black me-3">
                         <i class="bi bi-eye" style="font-size: 2rem;"></i>
-                        </div>
-                        <div>
-                            <h2>Simple Health Overview</h2>
-                            <p>Tailored summaries help you track today's health and progress over time, ensuring every aspect of your well-being is simple to understand.</p>
-                          </div>
+                      </div>
+                      <div>
+                          <h2>Simple Health Overview</h2>
+                          <p>Tailored summaries help you track today's health and progress over time, ensuring every aspect of your well-being is simple to understand.</p>
+                      </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
                       <div class="icon-square text-black me-3">
                         <i class="bi bi-calendar3" style="font-size: 2rem;"></i>
-                        </div>
-                        <div>
-                            <h2>Long Term Outlook</h2>
-                            <p>Focus on sustainable health with strategies that prioritize your long-term well-being, ensuring you maintain vitality today and into the future, without the burnout.</p>
-                          </div>
+                      </div>
+                      <div>
+                          <h2>Long Term Outlook</h2>
+                          <p>Focus on sustainable health with strategies that prioritize your long-term well-being, ensuring you maintain vitality today and into the future, without the burnout.</p>
+                      </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
                       <div class="icon-square text-black me-3">
                         <i class="bi bi-cloud-download" style="font-size: 2rem;"></i>
-                        </div>
-                        <div>
-                            <h2>Dream Data Access</h2>
-                            <p>In-app data processing basics- View and compare different data, finding patterns in your data with our graphs, and statistically assess relationships with our analyses. Not enough? Easily export the data you want as a CSV.</p>
-                          </div>
+                      </div>
+                      <div>
+                          <h2>Dream Data Access</h2>
+                          <p>In-app data processing basics- View and compare different data, finding patterns in your data with our graphs, and statistically assess relationships with our analyses. Not enough? Easily export the data you want as a CSV.</p>
+                      </div>
                     </div>
                 </div>
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                   <div class="feature-box col d-flex align-items-start">
                     <div class="icon-square text-black me-3">
                       <i class="bi bi-clock-fill" style="font-size: 2rem;"></i>
-                      </div>
-                      <div>
-                          <h2>Ultra-Fast Logging</h2>
-                          <p>Log your health data in under two seconds with our streamlined process, designed for efficiency and ease, keeping your day uninterrupted and your data tracking on point.</p>
-                        </div>
+                    </div>
+                    <div>
+                        <h2>Ultra-Fast Logging</h2>
+                        <p>Log your health data in under two seconds with our streamlined process, designed for efficiency and ease, keeping your day uninterrupted and your data tracking on point.</p>
+                    </div>
                   </div>
                   <div class="feature-box col d-flex align-items-start">
                     <div class="icon-square text-black me-3">
                       <i class="bi bi-pencil-square" style="font-size: 2rem;"></i>
-                      </div>
-                      <div>
-                          <h2>Log Anything</h2>
-                          <p>We let you log anything- allowing you to record and analyze data that is important to you. If you want to log something we don't have, reach out!</p>
-                        </div>
+                    </div>
+                    <div>
+                        <h2>Log Anything</h2>
+                        <p>We let you log anything- allowing you to record and analyze data that is important to you. If you want to log something we don't have, reach out!</p>
+                    </div>
                   </div>
                   <div class="feature-box col d-flex align-items-start">
                     <div class="icon-square text-black me-3">
                       <i class="bi bi-bar-chart-line" style="font-size: 2rem;"></i>
-                      </div>
-                      <div>
-                          <h2>Single Health Metric</h2>
-                          <p>We simplify preventative health by providing a single research-based metric, setting a clear goal of 100% each day and helping you understand how to achieve it. </p>
-                        </div>
+                    </div>
+                    <div>
+                        <h2>Single Health Metric</h2>
+                        <p>We simplify preventative health by providing a single research-based metric, setting a clear goal of 100% each day and helping you understand how to achieve it. </p>
+                    </div>
                   </div>
               </div>
             </div>
@@ -122,7 +120,6 @@
           <div class="container">
             <div id="screenshotCarousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
-                <!-- Make sure the first item has the 'active' class -->
                 <div class="carousel-item active">
                   <img src="Screenshot 2024-04-08 at 10.08.08.png" class="d-block w-100" alt="GAIA Dashboard">
                 </div>
@@ -135,7 +132,6 @@
                 <div class="carousel-item">
                   <img src="Screenshot 2024-04-08 at 10.09.09.png" class="d-block w-100" alt="GAIA Graph">
                 </div>
-                <!-- Add more items as needed -->
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#screenshotCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -149,7 +145,7 @@
           </div>
         </section>
 
-        <section id='about', class="manifesto-section">
+        <section id="about" class="manifesto-section">
           <div class="container">
               <h2>Make Self Control Sexy Again</h2>
               <p>When I was studying Clinical Neuroscience, it occurred to me that many Neurological Disorders are cureless, but can have a significant reduction in likelihood with appropriate Preventative Health Practices.</p>
@@ -158,11 +154,11 @@
               <p>I started talking to my friends and realised that a lot of them were facing similar issues. They were trying to use data from the wearables they already wore, or the Drs appointments they went to, and couldn’t find any straightforward ways to store the data or get useful/understandable information out of them.</p>
               <p>I ended up adjusting my system to work with some of them, helping them solve their personal health mysteries:</p>
               <ul>
-                <li>How can i get my V02 back to normal range?</li>
+                <li>How can I get my V02 back to normal range?</li>
                 <li>How consistent is my low blood pressure? Should I be worried?</li>
                 <li>How do my different meals impact my insulin levels?</li>
                 <li>I’m nervous about dementia- what can I do???</li>
-                <li>When am i working best, and how can i get more done in less time?</li>
+                <li>When am I working best, and how can I get more done in less time?</li>
               </ul>
               <p>Thus, GAIA was born.</p>
               <p>I’ll add different things you can log, add different passive sensors, keep the algos and associated recommendations up to date with the most recent research findings, and include the most cutting-edge sensors to help you keep on top of your game.</p>
@@ -188,42 +184,43 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
-        const words = [
-          "sleep",
-          "eating",
-          "hydration",
-          "breathing",
-          "symptoms",
-          "stress",
-          "workouts",
-          "calories",
-          "heart",
-          "mood",
-          "productivity",
-          "mental state",
-          "blood pressure",
-          "sugar",
-          "meditation",
-          "recovery",
-          "skin",
-          "nutrition",
-          "steps",
-          "goals",
-          "immunity",
-          "cycle",
-          "meds",
-          "energy",
-          "weight",
-          "activity",
-          "sun",
-      ];
+    const words = [
+        "sleep",
+        "eating",
+        "hydration",
+        "breathing",
+        "symptoms",
+        "stress",
+        "workouts",
+        "calories",
+        "heart",
+        "mood",
+        "productivity",
+        "mental state",
+        "blood pressure",
+        "sugar",
+        "meditation",
+        "recovery",
+        "skin",
+        "nutrition",
+        "steps",
+        "goals",
+        "immunity",
+        "cycle",
+        "meds",
+        "energy",
+        "weight",
+        "activity",
+        "sun",
+    ];
 
-          let i = 0;
-          setInterval(() => {
-              document.getElementById('dynamicWord').textContent = words[i];
-              i = (i + 1) % words.length; // Reset to 0 when reaching the last word
-          }, 2000); // Change the word every 2 seconds
-      });
-      </script>
-  </body>
+    let i = 0;
+    setInterval(() => {
+        document.getElementById('dynamicWord').textContent = words[i];
+        i = (i + 1) % words.length; // Reset to 0 when reaching the last word
+    }, 2000); // Change the word every 2 seconds
+});
+
+    </script>
+</body>
 </html>
