quick wording change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main role="main">
         <section class="banner-section text-center">
             <div class="container py-5">
-                <h1 class="display-4 fw-bold">GAIA</h1>
+                <h1 class="display-4 fw-bold">GAIA Health</h1>
                 <p class="lead mb-4">Find Your Balance, with simple, personalized health analytics</p>
                 <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Get Early Access</a>
             </div>
