added case studies

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                   <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="#case-studies">Case Studies</a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link" href="#contact">Contact</a>
               </li>
           </ul>
@@ -93,8 +96,8 @@
                       <i class="bi bi-pencil-square" style="font-size: 2rem;"></i>
                     </div>
                     <div>
-                        <h2>Log Anything</h2>
-                        <p>We let you log anything- allowing you to record and analyze data that is important to you. If you want to log something we don't have, reach out!</p>
+                        <h2>Log Anything & Habit Tracking</h2>
+                        <p>We let you log anything, allowing you to record and analyze data that is important to you. Habit tracking is directly updated depending on your logged data.</p>
                     </div>
                   </div>
                   <div class="feature-box col d-flex align-items-start">
@@ -165,6 +168,83 @@
               <p>So- check out GAIA! If you have something that you’re thinking about that I don’t account for, let me know! I’ll add it in!</p>
           </div>
       </section>
+
+        <!-- Case Studies Section -->
+        <section id="case-studies" class="py-5 bg-light">
+            <div class="container">
+                <h2>Case Studies</h2>
+                <h5 class="mb-4">Learn how you can use GAIA today</h5>
+                <div id="caseStudiesCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row g-4">
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h3 class="card-title">Pregnancy</h3>
+                                            <p class="card-text">Log the information relevant to your pregnancy and manage your health data in an integrated platform. GAIA Health helps you keep all your important metrics organized and accessible for informed decision-making.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h3 class="card-title">Diabetes</h3>
+                                            <p class="card-text">Log the information relevant to your diabetes and manage your blood sugar levels, dietary habits, and overall health data. Use GAIA Health's integrated platform to keep your important metrics organized and accessible for informed decision-making.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h3 class="card-title">Longevity</h3>
+                                            <p class="card-text">Log the information relevant to your long-term health goals and manage your habits and metrics. GAIA Health's integrated platform helps you keep your important metrics organized and accessible for informed decision-making.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row g-4">
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h3 class="card-title">Fitness</h3>
+                                            <p class="card-text">Log the information relevant to your fitness activities and manage your workout routines and progress. GAIA Health's integrated platform helps you keep your fitness data organized and accessible for informed decision-making.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h3 class="card-title">Research</h3>
+                                            <p class="card-text">Log the information relevant to your research and track various data points with precision. GAIA Health's integrated platform helps you keep your research data organized and accessible for informed decision-making.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h3 class="card-title">Mental Health</h3>
+                                            <p class="card-text">Log the information relevant to your mental health and manage your mood, stress levels, and other mental health metrics. GAIA Health's integrated platform helps you keep your mental health data organized and accessible for informed decision-making.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#caseStudiesCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#caseStudiesCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+
 
         <section id="early-access" class="hero-section text-center py-5">
             <div class="container">
