re-added in some old copy

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <main role="main">
         <section class="banner-section text-center">
             <div class="container py-5">
-                <h1 class="display-4 fw-bold">Better Understand Your Health Data</h1>
-                <p class="lead mb-4">Track and analyze your health data effortlessly to make informed decisions and achieve long-term well-being.</p>
+                <h1 class="display-4 fw-bold">GO GO GAIA</h1>
+                <p class="lead mb-4">Find Your Balance, with simple, personalized health analytics</p>
                 <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Get Early Access</a>
             </div>
         </section>
