--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <section class="banner-section text-center">
             <div class="container py-5">
                 <h1 class="display-4 fw-bold">GO GO GAIA</h1>
-                <p class="lead mb-4">Find Your Balance, with simple, personalized health analytics</p>
-                <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Get Early Access</a>
+                <p class="lead mb-4">Find Your Balance, with simple, personalized insights</p>
+                <a class="btn btn-primary btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0-1-0" role="button">Get Early Access</a>
             </div>
         </section>
 
-        <section id="features" class="feature-section py-5 bg-light">
+        <section id="features" class="feature-section py-5">
             <div class="container">
               <h2>Why Use GAIA?</h2>
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
@@ -250,12 +250,12 @@
             <div class="container">
                 <h2 class="display-6 fw-bold">Sign Up Today For Free</h2>
                 <p class="lead mb-4">Your feedback can shape the future of personal health management. Get early access and help us make GO GO GAIA even better.</p>
-                <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Join the Beta Program</a>
+                <a class="btn btn-primary btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0-1-0" role="button">Join the Beta Program</a>
             </div>
         </section>
     </main>
 
-    <footer class="footer mt-auto py-3 bg-light" id="contact">
+    <footer class="footer mt-auto py-3" id="contact">
     <div class="container text-center">
         <p>Connect with us at <a href="mailto:abigailholland22@gmail.com">abigailholland22@gmail.com</a> or on Twitter <a href="https://twitter.com/holland_neuro">@holland_neuro</a></p>
     </div>
