changed the links

--- a/index.html
+++ b/index.html
@@ -248,16 +248,16 @@
 
         <section id="early-access" class="hero-section text-center py-5">
             <div class="container">
-                <h2 class="display-6 fw-bold">Sign Up Today For Free</h2>
-                <p class="lead mb-4">Your feedback can shape the future of personal health management. Get early access and help us make GO GO GAIA even better.</p>
-                <a class="btn btn-primary btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0-1-0" role="button">Join the Beta Program</a>
+                <h2 class="display-6 fw-bold">Download Now!</h2>
+                <p class="lead mb-4">Download Go Go Gaia now to access the future of personal health management.</p>
+                <a class="btn btn-primary btn-lg" href="https://apps.apple.com/ca/app/go-go-gaia/id6608432371" role="button">Join the Beta Program</a>
             </div>
         </section>
     </main>
 
     <footer class="footer mt-auto py-3" id="contact">
     <div class="container text-center">
-        <p>Connect with us at <a href="mailto:abigailholland22@gmail.com">abigailholland22@gmail.com</a> or on Twitter <a href="https://twitter.com/holland_neuro">@holland_neuro</a></p>
+        <p>Connect with us at <a href="mailto:support@hollandneurotech.com">support@hollandneurotech.com</a> or on Twitter <a href="https://twitter.com/holland_neuro">@holland_neuro</a></p>
     </div>
     </footer>
 
